<resources>
    <string name="app_name">UltimatePlayerHQ</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lorem">Lorem ipsum is a name for a common type of placeholder text. Also known as filler or dummy text, this is simply copy that serves to fill a space without actually saying anything meaningful. It\'s essentially nonsense text, but gives an idea of what real text will look like in the final product.</string>
    <string name="view_all">View All</string>
    <string name="latest_sessions">Latest Sessions</string>
    <string name="my_account">My Account</string>
    <string name="edit_your_profile"><u>Edit Your Profile</u></string>
    <string name="edit_your_email">Edit Your Email</string>
    <string name="change_your_email"><u>Change Your Email</u></string>
    <string name="change_your_password"><u>Change Your Password</u></string>
    <string name="logout"><u>Log Out</u></string>
    <string name="plans">Plans</string>
    <string name="access_content"><u>Access Content</u></string>
    <string name="your_email">Your Email</string>
    <string name="forgot_email"><u>Forgot Email?</u></string>
    <string name="your_password">Your Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="login_in_to_your_account">Login in to your account</string>
    <string name="or">or</string>
    <string name="create_account">Create Account</string>
    <string name="send_me_reset_instruction">Send me reset instructions</string>
    <string name="we_can_send_you_reset_instructions">We can send you reset instructions.</string>
    <string name="forgot_your_password">Forgot password</string>
    <string name="forgot_your_email">Forgot your email?</string>
    <string name="enter_your_information_below_so_we_can_help_you">Enter your information below so we can help you.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="request_help_now">Request help now</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="access_conten"><![CDATA[<u>Access Content</u>]]></string>
    <string name="free">[Free]</string>
    <string name="start_up_plan">Start-up Plan</string>
    <string name="view_plan_details">View plan details</string>
    <string name="join_new_plan">Join new plan</string>
    <string name="profile">Profile</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_chosen">No File Chosen</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_your_new_email">Enter Your New Email</string>
    <string name="enter_your_current_password">Enter Your Current Password</string>
    <string name="update_email">Update Email</string>
    <string name="enter_your_new_password">Enter Your New Password</string>
    <string name="update_password">Update Password</string>
    <string name="drill_library">Drill Library</string>
    <string name="comments_d">Comments(%d)</string>
    <string name="add_comment">Add Comment</string>
    <string name="registration">Registration</string>
    <string name="shop">Shop</string>
    <string name="no_comments">No Comment Found</string>
    <string name="send">Send</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="welcome_text">Welcome to the UltimateplayerHQ Online Community Resource page! Join us in connecting all coaches to share and learn new ideas in player development and overall improvement as coaches. Never be short of ideas with an ever growing collection of more than 600 animated football drills. New animated drills are posted every week and archived for you to view 24/7.</string>
    <string name="post">Post</string>
    <string name="welcome">Welcome</string>
    <string name="log_in_sign_up">Log In/Sign Up</string>
    <string name="please_create_an_account_on_our_website">Please create an account on our website</string>
    <string name="vip_membership">VIP Membership</string>
    <string name="plan_detail">Membership Detail</string>
    <string name="enter_keywords_here">Enter Keywords here</string>
    <string name="my_favourite_session">My Favourite session</string>
    <string name="exit">Exit</string>
    <string name="coach_login">Coach Login</string>
    <string name="squad">Squad</string>
    <string name="register_player">Register Player</string>
    <string name="football_team_name">Football Team Name</string>
    <string name="save">Save</string>
    <string name="player">Player</string>
    <string name="coach">Coach</string>
    <string name="register_coach">Register Coach</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="calender">Calendar</string>
    <string name="add_match">Add Match</string>
    <string name="add_training">Add Training</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="view_detail">View Detail</string>
    <string name="match_details">Match Details</string>
    <string name="date">Date</string>
    <string name="venue">Venue</string>
    <string name="score">Score</string>
    <string name="goalscores">GoalScores</string>
    <string name="assists">Assits</string>
    <string name="player_of_match">Player of the match</string>
    <string name="create_training_event">CREATE TRAINING EVENT</string>
    <string name="create_new">Create New</string>
    <string name="done">Done</string>
    <string name="upload">Upload</string>
    <string name="view">View</string>
    <string name="pick_image_intent_text">pick Image</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="default_notification_channel_id">UPHQ</string>
</resources>