<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ic_baseline_navigate_before_24"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/_2sdp"
            android:id="@+id/iv_back_month"
            android:background="?selectableItemBackground"
            app:tint="@color/colorPrimary" />
        <TextView
            android:fontFamily="@font/teko_s_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="Month"
            android:textAllCaps="true"
            android:layout_gravity="center_vertical"
            android:id="@+id/tv_month"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ic_baseline_navigate_next_24"
            android:layout_gravity="center_vertical"
            android:id="@+id/iv_next_month"
            android:layout_marginStart="@dimen/_2sdp"
            android:background="?selectableItemBackground"
            app:tint="@color/colorPrimary" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:orientation="horizontal">
        <TextView
            android:fontFamily="@font/teko_r"
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/sun"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:fontFamily="@font/teko_r"
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/mon"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:fontFamily="@font/teko_r"
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/tue"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:fontFamily="@font/teko_r"
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/wed"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:fontFamily="@font/teko_r"
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/thu"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:fontFamily="@font/teko_r"
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/fri"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:fontFamily="@font/teko_r"
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/sat"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_calender"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="7"
        tools:itemCount="50"
        tools:listitem="@layout/item_calender" />


</LinearLayout>