<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_60sdp"
        android:src="@mipmap/ic_launcher" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_4sdp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/your_email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/forgot_email"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_10ssp"
                    android:visibility="gone" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/in_email"
                style="@style/myTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/your_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />


                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/forgot_password"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_10ssp" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inPassword"
                style="@style/myTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue"
                app:passwordToggleEnabled="false"
                app:passwordToggleTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/login_in_to_your_account"
                android:textAllCaps="false"
                app:backgroundTint="@color/black"
                app:elevation="@dimen/_4sdp"
                app:rippleColor="?colorOnPrimary" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/_10sdp"
                android:text="@string/or" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:elevation="@dimen/_4sdp"
                app:rippleColor="?colorOnPrimary"
                app:strokeColor="@android:color/darker_gray" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>