<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_4sdp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/_10sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_can_send_you_reset_instructions"
                android:textSize="@dimen/_10ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/your_email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/myTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/in_email"
                app:boxStrokeColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/submit"
                android:textAllCaps="false"
                app:backgroundTint="@color/black"
                app:elevation="@dimen/_4sdp"
                app:rippleColor="?colorOnPrimary" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>