<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_4sdp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_current_password"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_15sdp"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/myTextInputLayout"
                android:layout_width="match_parent"
                android:id="@+id/in_c_password"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_new_password"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_15sdp"
                android:textSize="@dimen/_14ssp" />
            <!-- app:helperText="Minimum 8 Characters"-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/myTextInputLayout"
                android:layout_width="match_parent"

                android:id="@+id/in_new_password"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:id="@+id/btn_update"
                android:text="@string/update_password"
                android:textAllCaps="false"
                app:backgroundTint="@color/black"
                app:elevation="@dimen/_4sdp"
                app:rippleColor="?colorOnPrimary" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>